name:          hpassword
version:       0.1
synopsis:      A simple random password generator
homepage:      https://github.com/ayron/HPassword
category:      Testing
author:        Ayron Catteau
maintainer:    ayronc@gmail.com
stability:     experimental

license:            BSD3
license-file:       LICENSE
extra-source-files: README 
build-type:         Simple
cabal-version:      >=1.2

executable hpassword
  main-is:        hpassword.hs
  build-depends:  base, random 

