name:          rpassword
version:       0.1
synopsis:      A simple random password generator
homepage:      https://github.com/ayron/HPassword
category:      Testing
author:        Ayron Catteau
maintainer:    ayronc@gmail.com
stability:     experimental

license:       BSD3
license-file:  LICENSE
build-type:    Simple
cabal-version: >=1.2

executable rpassword
--  build-depends:  HUnit
  main-is:        rpassword.hs
  hs-source-dirs: prog1
  build-depends: base, random 

